--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionString": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=VirtualLibraryDB;TrustServerCertificate=True;",
+  "ConnectionString": "Data Source=(local);Initial Catalog=TestDB;Integrated Security=True;",
   "StringOptionalParam": "String oprional parameter value",
-  "BoolRequiredParam": true,
+  "BoolRequiredParam": true
 }
